@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage1_target.py,v 1.25 2005/12/08 22:02:05 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage1_target.py,v 1.26 2005/12/16 14:42:07 rocket Exp $
 
 """
 Builder class for LiveCD stage1.
@@ -52,19 +52,19 @@ class livecd_stage1_target(generic_stage_target):
 			self.settings["use"]=["livecd"]
 
 	def set_packages(self):
-	    generic_stage_target.set_packages(self)
-	    if self.settings.has_key(self.settings["spec_prefix"]+"/packages"):
-		if type(self.settings[self.settings["spec_prefix"]+"/packages"]) == types.StringType:
-		    self.settings[self.settings["spec_prefix"]+"/packages"] = \
-			self.settings[self.settings["spec_prefix"]+"/packages"].split()
+		generic_stage_target.set_packages(self)
+		if self.settings.has_key(self.settings["spec_prefix"]+"/packages"):
+			if type(self.settings[self.settings["spec_prefix"]+"/packages"]) == types.StringType:
+				self.settings[self.settings["spec_prefix"]+"/packages"] = \
+					self.settings[self.settings["spec_prefix"]+"/packages"].split()
 		self.settings[self.settings["spec_prefix"]+"/packages"].append("livecd-tools")
 
 	def set_pkgcache_path(self):
 	    if self.settings.has_key("pkgcache_path"):
-		if type(self.settings["pkgcache_path"]) != types.StringType:
-		    self.settings["pkgcache_path"]=normpath(string.join(self.settings["pkgcache_path"]))
+			if type(self.settings["pkgcache_path"]) != types.StringType:
+				self.settings["pkgcache_path"]=normpath(string.join(self.settings["pkgcache_path"]))
 	    else:
-		generic_stage_target.set_pkgcache_path(self)
+			generic_stage_target.set_pkgcache_path(self)
 
 def register(foo):
 	foo.update({"livecd-stage1":livecd_stage1_target})
