@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage1_target.py,v 1.18 2005/12/13 20:32:43 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage1_target.py,v 1.19 2005/12/16 14:42:07 rocket Exp $
 
 """
 Builder class for a stage1 installation tarball build.
@@ -30,10 +30,11 @@ class stage1_target(generic_stage_target):
 
 	def set_portage_overlay(self):
 		generic_stage_target.set_portage_overlay(self)
-		print "\nWARNING !!!!!"
-		print "\tUsing an overlay for earlier stages could cause build issues."
-		print "\tIf you break it, you buy it. Don't complain to us about it."
-		print "\tDont say we did not warn you\n"
+		if self.settings.has_key("portage_overlay"):
+			print "\nWARNING !!!!!"
+			print "\tUsing an portage overlay for earlier stages could cause build issues."
+			print "\tIf you break it, you buy it. Don't complain to us about it."
+			print "\tDont say we did not warn you\n"
 def register(foo):
 	foo.update({"stage1":stage1_target})
 	return foo
