@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage4_target.py,v 1.12 2005/12/02 20:09:03 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage4_target.py,v 1.13 2005/12/16 14:42:07 rocket Exp $
 
 """
 Builder class for LiveCD stage1.
@@ -11,7 +11,6 @@ from generic_stage_target import *
 
 class stage4_target(generic_stage_target):
 	def __init__(self,spec,addlargs):
-		#self.required_values=["stage4/use"]
 		self.required_values=[]
 		self.valid_values=self.required_values[:]
 		self.valid_values.extend(["stage4/use", "stage4/packages", "stage4/root_overlay", "stage4/fsscript", \
@@ -19,11 +18,11 @@ class stage4_target(generic_stage_target):
 		generic_stage_target.__init__(self,spec,addlargs)
 
 	def set_pkgcache_path(self):
-	    if self.settings.has_key("pkgcache_path"):	
-		if type(self.settings["pkgcache_path"]) != types.StringType:
-		    self.settings["pkgcache_path"]=normpath(string.join(self.settings["pkgcache_path"]))
-	    else:
-		generic_stage_target.set_pkgcache_path(self)
+		if self.settings.has_key("pkgcache_path"):	
+			if type(self.settings["pkgcache_path"]) != types.StringType:
+				self.settings["pkgcache_path"]=normpath(string.join(self.settings["pkgcache_path"]))
+			else:
+				generic_stage_target.set_pkgcache_path(self)
 
 	def set_cleanables(self):
 		self.settings["cleanables"]=["/var/tmp/*","/tmp/*"]
